--- a/package.json
+++ b/package.json
@@ -11,20 +11,18 @@
     "start": "electron ."
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "debug": "^2.3.3",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "debug": "^2.6.0",
     "fuse.js": "^2.6.1",
     "nodobjc": "^2.1.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^4.4.6",
-    "redux": "^3.6.0"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "devtron": "^1.4.0",
-    "electron-prebuilt": "^1.4.10"
+    "electron": "^1.4.15"
   },
   "description": "Hold the Text!",
   "bugs": {
