--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "electron ."
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-register": "^6.22.0",
     "debug": "^2.6.0",
