--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "start": "electron ."
   },
   "dependencies": {
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "debug": "^2.6.0",
-    "fuse.js": "^2.6.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "debug": "^3.1.0",
+    "fuse.js": "^3.2.0",
     "nodobjc": "^2.1.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "electron": "^1.4.15"
+    "electron": "^1.8.2"
   },
   "description": "Hold the Text!",
   "bugs": {
