--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-register": "^6.26.0",
     "debug": "^3.1.0",
     "fuse.js": "^3.2.0",
+    "moment": "^2.20.1",
     "nodobjc": "^2.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
